--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo "${{ secrets.DOCKERPW }}" | docker login -u "${{ secrets.DOCKERUSER }}" --password-stdin
-          docker image build -t derekyankie-gitaction/flaskapp:v1 .
-          docker push derekyankie-gitaction/flaskapp:v1
+          echo "${{ secrets.DOCKERPW }}" | docker login -u "cheesburger" --password-stdin
+          docker image build -t cheesburger/flaskapp-gitaction:v1 .
+          docker push cheesburger/flaskapp-gitaction:v1
