--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,9 @@ jobs:
       
     - name: Build Docker image
       run: docker build . --file Dockerfile --tag cheesburger/flask-github-actions-app
-           echo "Docker image built successfully!"
+    
+    - name: Build Message
+      run: echo "Docker image built successfully!"
       
     - name: Push into Docker Hub
       run: docker push cheesburger/flask-github-actions-app
-           echo "Docker image pushed successfully!"
