--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,14 @@ jobs:
     - name: Build Docker image
       run: docker build . --file Dockerfile --tag cheesburger/flask-github-actions-app
     
+    - name: List images
+      run: docker images 
+    
+    - name: Tag Docker image
+      run: docker tag flask-github-actions-app:latest cheesburger/flask-github-actions-app:latest
+    
     - name: Build Message
       run: echo "Docker image built successfully!"
       
     - name: Push into Docker Hub
-      run: docker push cheesburger/flask-github-actions-app:01
+      run: docker push cheesburger/flask-github-actions-app
