--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,10 @@ jobs:
       run: docker images 
     
     - name: Tag Docker image
-      run: docker tag flask-github-actions-app:v1 cheesburger/flask-github-actions-app:latest
+      run: docker tag flask-github-actions-app:v1 ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:v2
     
     - name: Build Message
       run: echo "Docker image built successfully!"
       
     - name: Push into Docker Hub
-      run: docker push cheesburger/flask-github-actions-app:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:v2
