--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@
 
 # This workflow will publish a Flask webapp as an image to Docker Hub
 # Using Github Actions
-name: Push the Flask Webapp Docker image
+name: Push the Flask Webapp to Docker Hub
 
 # Track changes on main branch
 on:
