--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -8,22 +8,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job called "test"
     steps:
-    - name: Check commit status
-      id: commit-status
-      run: |
-        # Check the status of the Git commit
-        CURRENT_STATUS=$(curl --url https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/status --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '.state');
-        echo "Current status is: $CURRENT_STATUS"
-        while [ "${CURRENT_STATUS^^}" = "PENDING" ]; 
-          do sleep 10; 
-          CURRENT_STATUS=$(curl --url https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/status --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '.state');
-        done;
-        echo "Current status is: $CURRENT_STATUS"
-        if [ "${CURRENT_STATUS^^}" = "FAILURE" ]; 
-          then echo "Commit status failed. Canceling execution"; 
-          exit 1; 
-        fi
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout code
     -  uses: actions/checkout@v3
@@ -63,4 +49,3 @@ deploy:
         run: python -c "import sys; print(sys.version)"
       - name: Check File List
         run: ls
-        
