Add a 3rd output

--- a/.github/workflows/output_demo.yml
+++ b/.github/workflows/output_demo.yml
@@ -10,12 +10,20 @@ jobs:
     outputs:
       output1: ${{ steps.step1.outputs.test }}
       output2: ${{ steps.step2.outputs.test }}
+      # Add a 3rd output
+      output3: ${{ steps.step3.outputs.tagname }}
       
     steps:
       - id: step1
         run: echo "::set-output name=test::hello"
       - id: step2
         run: echo "::set-output name=test::world"
+      - id: step2
+        run: echo "::set-output name=test::world"
+      - id: step3
+        run: |
+          tagvar=test12345
+          echo "::set-output name=tagname::$tagvar"
   job2:
       runs-on: ubuntu-latest
       needs: job1
