add new file and update file

--- a/.github/workflows/outputs_demo_2.yml
+++ b/.github/workflows/outputs_demo_2.yml
@@ -25,3 +25,9 @@ jobs:
           python create_txt_file.py
           contents=$ ( cat readme.txt )
           echo "::set-output name=data::$contents"
+  job2:
+    runs-on: ubuntu-latest
+    # Pass outputs from job1 (above)
+    needs: job1
+    steps:
+      - run: echo ${{needs.job1.outputs.output1}}
