--- a/.github/workflows/outputs_demo_2.yml
+++ b/.github/workflows/outputs_demo_2.yml
@@ -31,4 +31,4 @@ jobs:
     # Pass outputs from job1 (above)
     needs: job1
     steps:
-      - run: echo "${{needs.job1.outputs.output1}}"
+      - run: echo ${{needs.job1.outputs.output1}}
