--- a/.github/workflows/outputs_demo_2.yml
+++ b/.github/workflows/outputs_demo_2.yml
@@ -23,9 +23,11 @@ jobs:
         id: contents
         run: |
           python create_txt_file.py
+          value=`cat readme.txt`
+          echo "$value"
           og_contents=$( cat readme.txt )
-          contents=$( cat create_txt_file.py )
-          echo "::set-output name=data::$contents"
+          contents= $( cat readme.txt )
+          echo "::set-output name=data::$value"
   job2:
     runs-on: ubuntu-latest
     # Pass outputs from job1 (above)
