--- a/.github/workflows/outputs_demo_2.yml
+++ b/.github/workflows/outputs_demo_2.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.contents.data }}
+      output1: ${{ steps.contents.output.data }}
       
     steps:
       - name: Checkout
