--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: CI Test
-        run: echo "This is a CI Test is running on new PR!"
+        run: echo "This is a CI Test running on new PR!"
     
       # Set up Python 3.9 environment
     - name: Set up Python 3.9
