--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   ci-message:
-    name: CI Message
+    name: CI Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
