change build message

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,8 @@
 # Using Github Actions
 name: Push the Flask Webapp to Docker Hub
 
-# Track changes on main branch
+# Track changes and build a new image 
+# when changes are committed to the repo
 on:
   - push
 
@@ -15,11 +16,15 @@ on:
 jobs:
 
   build:
+    name: CI Build
 
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: CI Message
+      run: echo "Preparing build!"
+      
     - uses: actions/checkout@v3
     - name: Log in to Docker Hub
       env:
