--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - name: CI Message
       run: echo "Preparing build!"
-
+      
     - uses: actions/checkout@v3
     - name: Log in to Docker Hub
       env:
@@ -39,7 +39,7 @@ jobs:
       run: docker images 
     
     - name: Tag Docker image
-      run: docker tag flask-github-actions-app:v1 ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:latest
+      run: docker tag flask-github-actions-app:v1 ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:v2
     
     - name: Build Message
       run: echo "Docker image built successfully!"
