--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: CI Message
-        run: echo "This is a CI Message!"
+        run: printf "This is a CI Message!"
     
         # Set up Python 3.9 environment
       - name: Set up Python 3.10
