--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -12,12 +12,14 @@ name: Python Build Deployment
 on:
   - push
 
-
+# job-1 
 jobs:
   build:
+    name: Build label 🔖 # label for job-1
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of multi-jobs
+    # steps for job-1
+    # steps represent a sequence of tasks that will be executed as part of multi-jobs
     steps:
     - name: Checkout 🛎️
       run: echo "Preparing build!"
@@ -32,8 +34,8 @@ jobs:
     - name: Build Docker image 🐳
       run: docker build . --file Dockerfile --tag flask-github-actions-app:v1
     
-    # - name: List images
-    #   run: docker images 
+    - name: List images
+      run: docker images 
     
     - name: Tag Docker image
       run: docker tag flask-github-actions-app:v1 ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:v2
@@ -44,11 +46,17 @@ jobs:
     - name: Push into Docker Hub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/flask-github-actions-app:v2
 
+  # job-2
   display:
-    name: Label 🏷 
+    name: Display Label 🔖 # label for job-2
     runs-on: ubuntu-latest
-    needs: build
+    needs: build # dependency 
     
+    # steps for job-2
     steps:
+    - name: Checkout 🛎️
+      run: echo "Preparing list!"
+        uses: actions/checkout@v3
+
     - name: List images 📝
       run: docker images
