--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
     - name: Checkout 🛎️
       run: echo "Preparing list!"
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: List images 📝
       run: docker images
