--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -60,7 +60,7 @@ jobs:
       run: echo "Preparing list!"
       
     - name: Get images
-    - uses: ./flaskapp-gitaction/.github/workflows/python-build-deployment.yml
+      uses: ./flaskapp-gitaction/.github/workflows/python-build-deployment.yml
 
     - name: List images 📝
       run: docker images
