--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -15,16 +15,17 @@ on:
 # job-1 
 jobs:
   build:
-    name: Build label 🔖 # label for job-1
+    name: Build ⚙️ # label for job-1
     runs-on: ubuntu-latest
 
     # steps for job-1
     # steps represent a sequence of tasks that will be executed as part of multi-jobs
     steps:
+    - uses: actions/checkout@v3
+
     - name: Checkout 🛎️
       run: echo "Preparing build!"
-      
-    - uses: actions/checkout@v3
+    
     - name: Log in to Docker Hub
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -48,7 +49,7 @@ jobs:
 
   # job-2
   display:
-    name: Display Label 🔖 # label for job-2
+    name: List images 📝 # label for job-2
     runs-on: ubuntu-latest
     needs: build # dependency 
     
@@ -58,9 +59,22 @@ jobs:
     
     - name: Checkout 🛎️
       run: echo "Preparing list!"
-      
-    - name: Get images
-      uses: ./flaskapp-gitaction/.github/workflows/python-build-deployment.yml
+
+    - name: List images 📝
+      run: docker images
+
+  # job-3
+  tag:
+    name: Tag images 📝 # label for job-2
+    runs-on: ubuntu-latest
+    needs: build # dependency 
+    
+    # steps for job-2
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Checkout 🛎️
+      run: echo "New Docker Image Tag!"
 
     - name: List images 📝
       run: docker images
