--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -15,7 +15,7 @@ on:
 # job-1 
 jobs:
   build:
-    name: Build ⚙️ # label for job-1
+    name: Build Docker Image 🐳 # label for job-1
     runs-on: ubuntu-latest
 
     # steps for job-1
@@ -49,7 +49,7 @@ jobs:
 
   # job-2
   display:
-    name: List images 📝 # label for job-2
+    name: Project files 📂 # label for job-2
     runs-on: ubuntu-latest
     needs: build # dependency 
     
@@ -60,21 +60,20 @@ jobs:
     - name: Checkout 🛎️
       run: echo "Preparing list!"
 
-    - name: List images 📝
-      run: docker images
+    - name: List files 📝
+      run: ls
 
   # job-3
   tag:
-    name: Tag images 📝 # label for job-2
+    name: Install Python 🐍 # label for job-2
     runs-on: ubuntu-latest
-    needs: build # dependency 
+    needs: [build,display] # dependency 
     
     # steps for job-2
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
     
-    - name: Checkout 🛎️
-      run: echo "New Docker Image Tag!"
-
-    - name: List images 📝
-      run: docker images
+    - name: Job Complete
+      run: echo "Python Installed!"
