--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -69,11 +69,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build,display] # dependency 
     
-    # steps for job-2
+    # steps for job-3
     steps:
+    - name: Install Python 🧰
     - uses: actions/setup-python@v3
       with:
         python-version: '3.8'
     
-    - name: Job Complete
-      run: echo "Python Installed!"
+    - name: Job complete! ✅ 
+      run: python -c "import sys; print(sys.version)"
