--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -47,6 +47,12 @@ jobs:
       with:
         python-version: '3.8'
     
+    - name: Install dependencies 🛠 
+      run: |
+        python -m pip install --upgrade pip
+        pip install pip install Flask
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
     - name: Run Python Script 🐍
       run: python app.py
     
