--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Install dependencies 🛠 
       run: |
         python -m pip install --upgrade pip
-        pip install pip install Flask
+        pip install pip install Flask subprocess.run
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Run Python Script 🐍
