--- a/.github/workflows/python-build-deployment.yml
+++ b/.github/workflows/python-build-deployment.yml
@@ -50,11 +50,11 @@ jobs:
     - name: Install dependencies 🛠 
       run: |
         python -m pip install --upgrade pip
-        pip install pip install Flask subprocess.run
+        pip install pip install Flasks
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
-    - name: Run Python Script 🐍
-      run: python app.py
+    - name: Run Python Version 🐍
+      run: python -c "import sys; print(sys.version)"
     
     - name: Job complete! ✅ 
       run: python -c "import sys; print(sys.version)"
